# Gridkeeper_V2

./: .env.example  Cargo.toml  Dockerfile  Project Structure  README.md  tauri.conf.json
addon/: config.yaml  run.sh
frontend/: app.svelte  index.html  package.json  vite.config
icons/: icon.icns
src/: api.rs  automations.rs  integrations.rs  main.rs  models.rs
