[package]
name = "gridkeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
reqwest = { version = "0.11", features = ["json"] }
rumqttc = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = "0.4"
tauri = { version = "1", features = ["api-all"] }
// Add if needed: ocpp-rs, goodwe-api, etc. (search crates.io for proxies)

[build-dependencies]
tauri-build = "1"
